# juce-ci-starter

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.mac.yml  cmake.win.yml  cmake.yml
JuceCIStarter/: CMakeLists.txt
JuceCIStarter/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
